--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 certifi==2019.3.9
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==2.2.2
+django-heroku==0.3.1
 get==2019.4.13
 gunicorn==19.9.0
 heroku==0.1.4
 idna==2.8
 mysqlclient==1.4.2.post1
 post==2019.4.13
+psycopg2==2.8.2
 public==2019.4.13
 PyMySQL==0.9.3
 python-dateutil==1.5
@@ -16,4 +19,4 @@ request==2019.4.13
 requests==2.22.0
 sqlparse==0.3.0
 urllib3==1.25.3
-whitenoise
+whitenoise==4.1.2
